# nes_emulator_2

./: .clang-tidy  CMakeLists.txt  README.md  doxygen_config  ppl
include/: Cpu.h  Helo.h  Memory.h  Registers.h  memory.h
src/: Cpu.cpp  Helo.cpp  Memory.cpp  Registers.cpp  main.cc  memory.cpp  registers.cpp
test/: CpuTest.cpp  DummyTest.cpp  MemoryTest.cpp  RegistersTest.cpp
